deploy/openshift/overlays/production/external-postgres-service.yaml
apiVersion: v1
kind: Service
metadata: {name: external-postgres}
spec:
  type: ExternalName
  externalName: postgresql.production.internal
